fix clan card bug/hopefully fix profile button clipping

--- a/src/components/other.css
+++ b/src/components/other.css
@@ -1076,7 +1076,7 @@ code {
 		display: none;
 	}
 }
-.cardFooter_e0fe28 {
+.cardFooter_e0fe28, .buttonContainer_c22357 {
 	background: var(--background-tertiary);
 }
 .clanIconInner_e0fe28 {
